# rust-tdf

./: .gitignore  Cargo.toml  Readme.md
macro-tdf/: Cargo.toml
macro-tdf/src/: construct.rs  lib.rs
src/: lib.rs  token.rs
src/btdf/: des.rs  mod.rs  ser.rs
src/btdf/peekreader/: cursor.rs  mod.rs  reader.rs
src/json/: des.rs  mod.rs  ser.rs
src/rtdf/: des.rs  mod.rs  ser.rs
