[package]
name = "tdf"
version = "0.0.1"
authors = ["Artyom Polyanskiy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
byteorder="*"
itertools = "*"
num-derive = "*"
num-traits = "*"
macro-tdf = { path = "macro-tdf" }

