[package]
name = "tdf"
version = "0.0.4"
authors = ["Artyom Polyanskiy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="*"
byteorder="*"
num-derive = "0.3.3"
num-traits = "0.2.14"
macro-tdf = { path = "macro-tdf" }
log = "*"
peekread = "*"
# simple_logger = "*"