[package]
name = "macro-tdf"
version = "0.1.0"
authors = ["Artyom Polyanskiy (Nicothin) <35273601+nicoth-in@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn = { version = "1.0.73", features=["parsing", "proc-macro", "derive", "extra-traits", "printing"] }
quote = "1.0"
itertools = "*"
log = "*"

[lib]
proc-macro = true